frame/support/test/tests/pallet_ui/trait_001.stderr
error: Invalid pallet::const in pallet::trait, expect type trait item
 --> $DIR/trait_001.rs:9:3
  |
9 |         const U: u8 = 3;
  |         ^^^^^
